# starterkit-langgraph-react-aifsd

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  demo_budget_management.py  demo_llm_budget_assistant.py  demo_observability.py  demo_security_budget_management.py  pyproject.toml  simple_visual_demo.py  visual_demo.py
.github/workflows/: ci.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  MARKETING_PLAN.md  OBSERVABILITY_SYSTEM.md  TROUBLESHOOTING.md  USER_MANUAL.md
src/adapters/: graph_entry.py  langgraph_builder.py  lc_tool_bridge.py
src/core/: budget_management.py  errors.py  metrics_dashboard.py  observability.py  policies.py  settings.py  state.py  throttling_service.py  tool_interface.py
src/react/: critic.py  finalizer.py  loop.py  planner.py  reasoner.py  register_tools.py  tool_executor.py  tool_selector.py
src/starterkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: budget_monitor.py  echo.py  hello.py  monitor.py
tests/: conftest.py  test_graph_compile.py  test_llm_fallback.py  test_observability.py  test_react_loop.py  test_tools.py
