[project]
name = "starterkit"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "structlog>=24,<25",
  "langgraph>=0.2,<0.4",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=4.0,<5.0",
  "pytest-mock>=3.10,<4.0"
]
agent = [
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.4",
  "langchain-community>=0.2,<0.4",
]
dev = [
  "pre-commit>=3.0,<4.0",
  "black>=24.0,<25.0",
  "isort>=5.0,<6.0",
  "flake8>=7.0,<8.0",
  "safety>=2.0,<3.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
